调整群发消息列表样式

--- a/weapp/weixin2/templates/weixin/message/mass_sent_messages.html
+++ b/weapp/weixin2/templates/weixin/message/mass_sent_messages.html
@@ -12,6 +12,9 @@
             bottom: 0;
             margin: 0 0 20px 30px;
         }
+        .xui-advancedTableContent{
+            margin-bottom: 80px;
+        }
     </style>
 {% endblock %}
 {% block content-panel %}
@@ -39,7 +42,7 @@
         data-enable-paginator="true"
         data-enable-sort="false"
         data-selectable="false"
-        data-item-count-per-page="18"
+        data-item-count-per-page="20"
         data-disable-header-select="true"
         class="panel-body"
     ></div>
