--- a/weapp/templates/content_base_v2.html
+++ b/weapp/templates/content_base_v2.html
@@ -26,7 +26,7 @@
 				{% if request.user.username == 'malla' or request.user.username == 'ceshi01' or request.user.username == 'jobs' %}
 					<a href="{{ fans_host }}/help_center/outline/" target="_blank"><i class="xui-toolIcon"></i>帮助中心</a>
 				{% endif %}
-				<div class="popover bottom in" role="tooltip" id="popover838423" style="left: 132.594px; top: 16px; display: none;">
+				<div class="popover bottom in" role="tooltip" id="popover838423" style="left: 132.594px; top: 16px; display: none;z-index: 1">
 						<div class="popover-content" style="min-height:30px;width:170px;line-height:30px;text-algin:center;padding:1px 0px 0px 15px">
 							<span id="message_count_inner"></span>条新消息通知 <a href="{{ fans_host }}/message/message_list/?from=portal" target="_blank" style="color:blue;">查看</a>
 						</div>
