编辑时的小Bug

--- a/weapp/apps/customerized_apps/rebate/templates/editor/create_rebate_rule.html
+++ b/weapp/apps/customerized_apps/rebate/templates/editor/create_rebate_rule.html
@@ -182,7 +182,7 @@
 <script type="text/javascript">
 
 $(document).ready(function(){
-    var is_err = true;
+    var is_err = false;
     var answerContent = W.loadJSON('qrcode_answer');
     var options = {
         el: '#edit-message-panel',
